--- a/package.json
+++ b/package.json
@@ -2,5 +2,11 @@
   "name": "js-r1qj1u",
   "version": "0.0.0",
   "private": true,
-  "dependencies": {}
+  "scripts": {
+    "test": "mocha"
+  },
+  "dependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^7.1.2"
+  }
 }
